[package]
name = "datatoaster64"
publish = false
edition = "2021"

[workspace.package]
version = "0.1.0"

[dependencies]
datatoaster-core = { path = "datatoaster-core" }
datatoaster-fuse = { path = "datatoaster-fuse" }
datatoaster-traits = { path = "datatoaster-traits" }

[lints]
workspace = true

[workspace]
members = ["datatoaster-core", "datatoaster-fuse", "datatoaster-traits"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
