[package]
name = "datatoaster64"
authors = ["Jonathan Bastien-Filatrault <joe@x2a.org>"]
repository = "https://github.com/jothan/datatoaster64"
license = "GPL-3.0-or-later"

publish = false
edition = "2021"

[workspace.package]
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "string"] }
datatoaster-core = { path = "datatoaster-core" }
datatoaster-fuse = { path = "datatoaster-fuse" }
datatoaster-traits = { path = "datatoaster-traits" }
env_logger = "0.11"
libnotify = "1.0.3"
log = "0.4"
nix = { version = "0.29", features = ["uio"] }

[lints]
workspace = true

[workspace]
members = ["datatoaster-core", "datatoaster-fuse", "datatoaster-traits"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
