[package]
name = "datatoaster-core"
publish = false
version.workspace = true
edition = "2021"

[features]
default = []
std = ["no-std-compat/std", "spin/std", "bytemuck/extern_crate_std", "libc/std"]

[dependencies]
no-std-compat = { version = "0.4", features = ["alloc"] }
datatoaster-traits = { path = "../datatoaster-traits" }
spin = "0.9.8"
bytemuck = { version = "1.16.0", features = [
    "extern_crate_alloc",
    "zeroable_maybe_uninit",
    "min_const_generics",
    "derive",
    "const_zeroed",
    "zeroable_atomics",
    "must_cast",
] }
libc = { version = "0.2.155", default-features = false, features = [
    "const-extern-fn",
    "extra_traits",
] }

[lints]
workspace = true
